--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
             <ul class="nav-links">
                 <li>
                     <span>Misión</span>
-                    <div class="dropdown-content">Ofrecer sneakers de calidad a precios accesibles.</div>
+                    <div class="dropdown-content">Ofrecer sneakers de alta calidad a precios accesibles, asegurando que cada cliente encuentre el par perfecto que refleje su estilo y personalidad.</div>
                 </li>
                 <li>
                     <span>Visión</span>
-                    <div class="dropdown-content">Ser la tienda líder en sneakers urbanos y exclusivos.</div>
+                    <div class="dropdown-content">Aspiramos a convertirnos en la tienda líder en la venta de sneakers urbanos y exclusivos, brindando una experiencia de compra excepcional con variedad, autenticidad y comodidad.</div>
                 </li>
                 <li>
                     <span>Valores</span>
-                    <div class="dropdown-content">Compromiso, calidad y pasión por el estilo urbano.</div>
+                    <div class="dropdown-content">Nos guiamos por la pasión, el compromiso y la calidad. Valoramos la autenticidad y la confianza, ofreciendo siempre productos originales y un servicio al cliente excepcional.</div>
                 </li>
                 <li><a href="#contacto">Contacto</a></li>
                 <li><a href="#comprar" class="btn">Compra Ahora</a></li>
